# rabbits-and-foxes

./: .gitignore  .tasks  CMakeLists.txt  Makefile  README.md  zipfiles.sh
doc/: doc.tex
src/: errors.h  main.c  rabbits_fox.c  rabbits_fox.h  serial.c  utils.c  utils.h
test/: dataset_generator.py  print_all.py  run_all.py  run_all_profile.py  runs.sh  utils.py
